zz_old_one/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/issuer: "grafana-tls-secret"
spec:
  tls:
    - hosts:
        - grafana.k.youngandhungry.org
      secretName: grafanas-tls-secret
  rules:
    - host: grafana.k.youngandhungry.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
