zz_old_one/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-server
  namespace: monitoring
  annotations:
    cert-manager.io/issuer: "prometheus-tls-secret"
spec:
  tls:
    - hosts:
        - prometheus.k.youngandhungry.org
      secretName: prometheus-tls-secret
  rules:
    - host: prometheus.k.youngandhungry.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
